# Course-project-APOLLO-SGD-LIKE-MEMORY-ADAMW-LEVEL-PERFORMANCE

./: .gitignore  COLAB.md  README.md  instructments.txt  paper.txt  pyproject.toml  requirements.txt
configs/: base.yaml  base_llama130_c4.yaml  base_llama130_pretrain.yaml  base_llama60_c4.yaml  base_llama60_finetune.yaml  base_llama60_pretrain.yaml
configs/suites/: ablation.yaml  apollo_oom_story_llama130.yaml  apollo_oom_story_llama60.yaml  figure3_llama130.yaml  figure4_llama130_scaling.yaml  finetune_llama60_arc.yaml  full_pretrain.yaml  microbench.yaml  table10_llama60.yaml  table2_llama130_microbench.yaml  table2_llama130_pretrain.yaml  table2_llama60_microbench.yaml  table2_llama60_pretrain.yaml  table7_llama60_fixed_batch_fair.yaml  table7_llama60_shared_budget.yaml
poster/: README.md  poster.css  poster.html
report/: report_draft.aux  report_draft.fdb_latexmk  report_draft.fls  report_draft.out  report_draft.tex  report_template.md
scripts/: analyze_sharpness.py  build_poster_assets.py  make_plots.py  make_table10.py  run_suite.py  smoke_test.py  train_experiment.py
src/apollo_story/: __init__.py  benchmark.py  config.py  data.py  finetune.py  model.py  optimizers.py  plotting.py  sharpness.py  train.py  utils.py
